fix alignment

--- a/resources/private/common-html/css/main.css
+++ b/resources/private/common-html/css/main.css
@@ -1869,45 +1869,50 @@ footer .lupapiste-brand .footer-box a:hover span, footer .lupapiste-brand .foote
 footer .lupapiste-brand .footer-box a span {
   vertical-align: middle;
 }
-/* line 57, ../sass/partials/_footer.scss */
+/* line 56, ../sass/partials/_footer.scss */
+footer .lupapiste-brand .footer-box i {
+  vertical-align: middle;
+  padding-left: 6px;
+}
+/* line 61, ../sass/partials/_footer.scss */
 footer .lupapiste-brand .footer-align-right {
   float: right;
 }
-/* line 59, ../sass/partials/_footer.scss */
+/* line 63, ../sass/partials/_footer.scss */
 footer .lupapiste-brand .footer-align-right ul {
   float: right;
 }
 @media (max-width: 991px) {
-  /* line 66, ../sass/partials/_footer.scss */
+  /* line 70, ../sass/partials/_footer.scss */
   footer .footer-box:nth-child(2n+1) {
     clear: left;
   }
-  /* line 69, ../sass/partials/_footer.scss */
+  /* line 73, ../sass/partials/_footer.scss */
   footer .footer-box {
     min-width: 49%;
   }
 }
 
 @media (max-width: 991px) {
-  /* line 76, ../sass/partials/_footer.scss */
+  /* line 80, ../sass/partials/_footer.scss */
   body {
     padding-bottom: 420px !important;
   }
 }
-/* line 81, ../sass/partials/_footer.scss */
+/* line 85, ../sass/partials/_footer.scss */
 footer ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
-/* line 87, ../sass/partials/_footer.scss */
+/* line 91, ../sass/partials/_footer.scss */
 footer ul li {
   margin-bottom: .5em;
   margin-top: 0;
 }
 
-/* line 94, ../sass/partials/_footer.scss */
+/* line 98, ../sass/partials/_footer.scss */
 #buildinfo {
   clear: both;
   display: block;
